# DiariZen

./: .gitignore  LICENSE  MODEL_LICENSE  README.md  extract_reducedwithConfigFile.py  extract_withConfigFile.py  inference_redimnet_withConfigFile.py  inference_withConfigFile.py  pyproject.toml  requirements.txt
diarizen/: ckpt_utils.py  logger.py  noam_updater.py  optimization.py  trainer_distill_prune.py  trainer_dual_opt.py  trainer_single_opt.py  trainer_utils.py  utils.py
diarizen/clustering/: VBx.py
diarizen/models/eend/: model_fbank_conformer.py  model_pyannote.py  model_wavlm_conformer.py  model_wavlm_conformer_mc.py  model_wavlm_mamba.py
diarizen/models/module/: conformer.py  convert_wavlm_from_hf.py  mamba_encoder.py  speechbrain_feats.py  utils_mc.py  wavlm_config.py
diarizen/models/module/wav2vec2/: components.py  hardconcrete.py  model.py
diarizen/models/module/wav2vec2/utils/: import_huggingface_wavlm.py
diarizen/models/module/wavlm/: WavLM.py  config.py
diarizen/models/pruning/: model_distill_prune.py  utils.py
diarizen/pipelines/: inference.py  inference_calib.py  inference_calib_reduced.py  save_powerset_probs.py  save_powerset_reduced_probs.py  utils.py
example/: run_example.py
pyannote-audio/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
pyannote-audio/.github/ISSUE_TEMPLATE/: config.yml
pyannote-audio/pyannote/audio/core/: inference.py  io.py  model.py  pipeline.py
pyannote-audio/pyannote/audio/models/segmentation/: PyanNet_wavlm_sc.py
pyannote-audio/pyannote/audio/pipelines/: clustering.py  plda_train.py  resegmentation.py  speaker_diarization.py  speaker_verification.py
pyannote-audio/pyannote/audio/pipelines/utils/: diarization.py  getter.py
pyannote-audio/pyannote/audio/tasks/segmentation/: mixins.py  speaker_diarization.py
pyannote-audio/pyannote/audio/torchmetrics/audio/: diarization_error_rate.py
pyannote-audio/pyannote/audio/utils/: plda.py
pyannote-audio/tutorials/community/: offline_usage_speaker_diarization.ipynb
recipes/diar_ssl/: README.md  dataset.py  infer_avg.py  run_dual_opt.py  run_single_opt.py  run_stage.sh  trainer_dual_opt.py  trainer_single_opt.py
recipes/diar_ssl/conf/: fbank_conformer.toml  pyannote_baseline.toml  wavlm_frozen_conformer.toml  wavlm_mamba.toml  wavlm_updated_conformer.toml
recipes/diar_ssl_mc/: README.md  dataset.py  infer_avg.py  run_dual_opt.py  run_stage.sh  trainer_dual_opt.py
recipes/diar_ssl_mc/conf/: channel_att_hidden_256_ft_base_8sec.toml
recipes/diar_ssl_pruning/: README.md  apply_pruning.py  convert_wavlm_from_hf.py  data  dataset.py  get_wavlm_from_finetuned.py  infer_avg.py  run_distill_prune.py  run_dual_opt_continued_training.py  run_stage.sh  trainer_distill_prune.py  trainer_dual_opt.py
recipes/diar_ssl_pruning/conf/: dual_opt_common.toml  dual_opt_common_large.toml  s80_base.toml  s80_large.toml
(+491 files in other folders)
