# ----------------- Build System -----------------
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ----------------- Metadata -----------------
[project]
name = "diarizen"
description = """DiariZen is a speaker diarization toolkit based on AudioZen .
    The AudioZen is mainly maintained by Xiang Hao (Hong Kong Polytechnic University). 
    The DiariZen is mainly maintained by Jiangyu Han (Brno University of Technology)"""
authors = [
    { name = "Xiang Hao", email = "haoxiangsnr@gmail.com" },
    { name = "Jiangyu Han", email = "ihan@fit.vut.cz"}
]
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
    "Operating System :: OS Independent",
]
keywords = [
    "multiple purposes",
    "speaker localization/tracking",
    "dereverberation",
    "enhancement",
    "separation",
    "recognition",
    "diarization"
]
[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["importlib_metadata", "sphinx-autoapi", "sphinx-rtd-theme", "myst-parser", "myst-nb"]
build = ["flit", "python-semantic-release", "sphinx-autobuild"]
[project.urls]
Source = "https://github.com/BUTSpeechFIT/DiariZen"

# ----------------- Tools Configuration -----------------
[tool.semantic_release]
version_toml = "pyproject.toml:project.version" # version location
branch = "main" # branch to make releases
changelog_file = "CHANGELOG.md" # changelog file`
build_command = "flit build" # build dists
upload_to_release = true # auto-create GitHub release
upload_to_repository = false # don't auto-upload to PyPI
remove_dist = false # don't remove dists
patch_without_tag = false # patch release by default
commit_author = "Jiangyu Han <ihan@fit.vut.cz>"
commit_subject = "Release {version}"
commit_message = "" # commit message

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["diarizen"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 119

[tool.ruff.lint.pydocstyle]
convention = "google"
